welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:12: error: ';' expected but '(' found.
      gauche(): gauche();
                      ^